--- a/app/views/sheets/edit.html.erb
+++ b/app/views/sheets/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Editing Sheet</h1>
 
 <%= render 'form', sheet: @sheet %>
-
+<% console %>
 
 <%= link_to 'Show', dossier_sheet_path(@dossier, @sheet) %> |
 <%= link_to 'Back', dossier_sheets_path(@dossier) %>
