--- a/app/views/blocks/get_template.js.erb
+++ b/app/views/blocks/get_template.js.erb
@@ -1,1 +1,20 @@
-$("#blocks-area").append("<%= escape_javascript(render partial: 'top_ioi' ) %>"); 
+$("#blocks-area").append("<%= escape_javascript(render partial: 'top_ioi', locals: {blockUID: @blockUID}) %>");
+
+var holder = $('[data-block-uid="<%= escape_javascript(@blockUID) %>"]')[0];
+holder.ondragover = function () { $(this).addClass('hover'); return false; };
+holder.ondragend = function () { $(this).removeClass('hover'); return false; };
+holder.ondrop = function (e) {
+  $(this).removeClass('hover');
+  e.preventDefault();
+
+  var file = e.dataTransfer.files[0],
+      reader = new FileReader();
+  reader.onload = function (event) {
+    console.log(event.target);
+    holder.style.background = 'url(' + event.target.result + ') no-repeat center';
+  };
+  console.log(file);
+  reader.readAsDataURL(file);
+
+  return false;
+}
