--- a/app/views/dossiers/edit.html.erb
+++ b/app/views/dossiers/edit.html.erb
@@ -9,6 +9,6 @@
   <% end %>
   <%= link_to("New Sheet", new_dossier_sheet_path(@dossier)) %>
 </div>
-
+<%= console %>
 <%= link_to 'Show', @dossier %> |
 <%= link_to 'Back', dossiers_path %>
