--- a/app/views/blocks/_top_ioi.html.erb
+++ b/app/views/blocks/_top_ioi.html.erb
@@ -1,8 +1,13 @@
-<div class="block row">
-  <h2>Top Item of Interest</h2>
-  <div id="holder" data-block-uid="<%= @blockUID %>" style="min-height:400px" class="drop-upload col-xs-12 col-md-8">
+<div data-block-uid="<%= @blockUID %>" class="block row">
+  <div data-editable>
+    <h2>Top Item of Interest</h2>
+  </div>
+  <div style="min-height:400px" class="drop-upload col-xs-12 col-md-8">
   </div>
   <div class="col-xs-12 col-md-4">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis imperdiet, orci quis pellentesque imperdiet, sapien lacus interdum felis, volutpat fermentum lacus augue eu tellus. Aenean consectetur augue ut quam dictum tristique. Integer mauris quam, sollicitudin in dapibus vel, hendrerit sit amet justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum nisi vel laoreet auctor. Morbi vestibulum mi in tempor elementum. Donec leo orci, porttitor id consectetur a, pretium id nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus placerat justo eget tincidunt ultricies.
+    <div  data-editable class="text-editable">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis imperdiet, orci quis pellentesque imperdiet, sapien lacus interdum felis, volutpat fermentum lacus augue eu tellus. Aenean consectetur augue ut quam dictum tristique. Integer mauris quam, sollicitudin in dapibus vel, hendrerit sit amet justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum nisi vel laoreet auctor. Morbi vestibulum mi in tempor elementum. Donec leo orci, porttitor id consectetur a, pretium id nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus placerat justo eget tincidunt ultricies.
+    </p>
+    </div>
   </div>
 </div>
