--- a/app/views/sheets/show.html.erb
+++ b/app/views/sheets/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Dossier:</strong>
-  <%= @sheet.dossier %>
+  <strong>Belongs To:</strong>
+  <%= @dossier.title %>
 </p>
 
 <%= link_to 'Edit', edit_dossier_sheet_path(@dossier, @sheet) %> |
