--- a/app/views/dossiers/show.html.erb
+++ b/app/views/dossiers/show.html.erb
@@ -10,5 +10,5 @@
   <%= @dossier.template %>
 </p>
 
-<%= link_to 'Edit', edit_dossier_path(@dossier) %> |
+<%= link_to 'Edit', dossier_sheets_path(@dossier) %> |
 <%= link_to 'Back', dossiers_path %>
