--- a/app/views/sheets/edit.html.erb
+++ b/app/views/sheets/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Editing Sheet</h1>
+<h1>Edit <%= @sheet.template %></h1>
+
 <%= javascript_include_tag :sheets %>
 
 <%= render 'form', sheet: @sheet %>
