--- a/app/views/dossiers/edit.html.erb
+++ b/app/views/dossiers/edit.html.erb
@@ -1,11 +1,11 @@
-<h1>Editing Dossier</h1>
+<h1>Editing Report</h1>
 
 <%= render 'form', dossier: @dossier %>
 
 <div class="sheets">
   sheets:
   <% @dossier.sheets.each do |sheet| %>
-    <%= sheet.title %>
+    <li><%= sheet.template %></li>
   <% end %>
   <%= link_to("New Sheet", new_dossier_sheet_path(@dossier)) %>
 </div>
