--- a/app/views/dossiers/index.html.erb
+++ b/app/views/dossiers/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Dossiers</h1>
+<h1>Reports</h1>
 
 <table>
   <thead>
@@ -16,7 +16,7 @@
       <tr>
         <td><%= dossier.title %></td>
         <td><%= dossier.template %></td>
-        <td><%= link_to 'Show', dossier %></td>
+        <td><%= link_to 'View', preview_path(dossier) %></td>
         <td><%= link_to 'Edit', edit_dossier_path(dossier) %></td>
         <td><%= link_to 'Destroy', dossier, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Dossier', new_dossier_path %>
+<%= link_to 'New Report', new_dossier_path %>
