--- a/app/views/blocks/_top_ioi.html.erb
+++ b/app/views/blocks/_top_ioi.html.erb
@@ -2,7 +2,7 @@
   <div data-editable>
     <h2>Top Item of Interest</h2>
   </div>
-  <div style="min-height:400px" class="drop-upload col-xs-12 col-md-8">
+  <div style="min-height:400px" class="drop-upload large col-xs-12 col-md-8">
   </div>
   <div class="col-xs-12 col-md-4">
     <div  data-editable class="text-editable">
