--- a/app/views/dossiers/index.html.erb
+++ b/app/views/dossiers/index.html.erb
@@ -16,8 +16,10 @@
       <tr>
         <td><%= dossier.title %></td>
         <td><%= dossier.template %></td>
-        <td><%= link_to 'Show', dossier %></td>
-        <td><%= link_to 'Edit', edit_dossier_path(dossier) %></td>
+
+        <td><%= link_to 'View', preview_path(dossier) %></td>
+        <td><%= link_to 'Edit', dossier_sheets_path(dossier) %></td>
+
         <td><%= link_to 'Destroy', dossier, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
