--- a/app/views/dossiers/index.html.erb
+++ b/app/views/dossiers/index.html.erb
@@ -1,12 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Dossiers</h1>
+<h1>Reports</h1>
 
 <table>
   <thead>
     <tr>
       <th>Title</th>
-      <th>Template</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,11 +14,8 @@
     <% @dossiers.each do |dossier| %>
       <tr>
         <td><%= dossier.title %></td>
-        <td><%= dossier.template %></td>
-
         <td><%= link_to 'View', preview_path(dossier) %></td>
         <td><%= link_to 'Edit', dossier_sheets_path(dossier) %></td>
-
         <td><%= link_to 'Destroy', dossier, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -28,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Dossier', new_dossier_path %>
+<%= link_to 'New Report', new_dossier_path %>
